--- a/static/aquapiai.html
+++ b/static/aquapiai.html
@@ -82,8 +82,8 @@
                     <span>Get <b>instant expert analysis</b> of your water parameters.</span>
                 </li>
                 <li class="flex items-center">
-                    <i class="fas fa-bell text-[#81B2E8] mr-3"></i>
-                    <span>Receive <b>real-time alerts</b> when parameters are out of range.</span>
+                    <i class="fas fa-question-circle text-[#81B2E8] mr-3"></i>
+                    <span>Ask me anything about <b>AquaPi</b> and its features!</span>
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-bolt text-[#81B2E8] mr-3"></i>
@@ -116,7 +116,7 @@
                 <div class="flex items-center">
                     <!-- Version number moved inside the chat header -->
                     <div id="chat-version-number" class="p-2 text-right text-xs text-gray-500">
-                        Version: 25.8.9.13
+                        Version: 25.8.9.15
                     </div>
                     <!-- Close Button for the Lightbox -->
                     <button id="close-chat-button" class="text-gray-400 hover:text-white ml-2">
@@ -232,7 +232,7 @@
     </div>
     <!-- Version number moved to the bottom right of the body -->
     <div id="version-number-main" class="fixed bottom-2 right-2 text-white bg-black bg-opacity-50 p-1 rounded-md text-right text-xs">
-        Version: 25.8.9.13
+        Version: 25.8.9.15
     </div>
 
     <script>
